--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -62,6 +62,12 @@
     </div>
   </div>
 
+  <!-- BACK TO TOP -->
+	<button id="backToTop" class="btn btn-secondary"
+		style="position:fixed; bottom:1rem; right:1rem; display:none; z-index:1000;">
+		↑ Torna su
+	</button>
+
   <!-- Scripts -->
   <script src="../config.js"></script>
   <script src="../assets/js/bootstrap.bundle.min.js"></script>
