--- a/error/error.html
+++ b/error/error.html
@@ -20,7 +20,7 @@
           Si è verificato un errore imprevisto.<br>
           Riprova più tardi o contatta l’assistenza.
         </p>
-        <a href="../calendar/calendar.html" class="btn btn-primary mt-3">
+        <a href="../login/index.html" class="btn btn-primary mt-3">
           Torna indietro
         </a>
       </div>
