--- a/view-note/view-note.html
+++ b/view-note/view-note.html
@@ -50,9 +50,10 @@
           <ul id="filesList" class="list-group">
           </ul>
         </div>
-        <div class="mb-3" id="fileInputGroup" hidden>
-          <label for="fileInput" class="form-label">Aggiungi Allegati</label>
-          <input type="file" id="fileInput" class="form-control" multiple>
+        <div class="mb-3" id="fileInputGroup">
+          <label for="fileInput" class="form-label">Aggiungi Allegati</label>        
+          <input type="file" id="fileInput" class="form-control" multiple disabled>  
+          <ul id="pendingFilesList" class="list-group mt-2"></ul>
         </div>
 
         <div class="text-end">
