--- a/error-log/error-log.html
+++ b/error-log/error-log.html
@@ -48,12 +48,18 @@
           <option value="asc">Asc.</option>
         </select>
       </div>
-      <div class="col-sm-12 col-md-4 col-lg-2 text-end">
-        <button type="submit" class="btn btn-primary w-100">
-          <i class="bi bi-funnel-fill me-1"></i>Filtra
-        </button>
+      <div class="col-auto ms-auto">
+        <div class="d-flex gap-2">
+          <button type="submit" class="btn btn-primary">
+            <i class="bi bi-funnel-fill me-1"></i>Cerca
+          </button>
+          <button type="button" id="resetBtn" class="btn btn-secondary">
+            <i class="bi bi-arrow-counterclockwise me-1"></i>Reset
+          </button>
+        </div>
       </div>
     </form>
+
 
     <!-- Logs Table -->
     <div class="table-responsive mb-4">
