--- a/day-detail/day-detail.html
+++ b/day-detail/day-detail.html
@@ -15,7 +15,7 @@
 
   <div class="container my-4">
     <div class="d-flex justify-content-between align-items-center mb-3">
-      <h1 class="h4 mb-0">Note del <span id="detailDate"></span></h1>   
+      <h1 class="h2 p-3 mb-0">Note del <span id="detailDate"></span></h1>   
       <button id="newNoteBtn" class="btn btn-primary">
         ➕ Nuova Nota
       </button>
