--- a/error-log/error-log.html
+++ b/error-log/error-log.html
@@ -13,11 +13,15 @@
 
   <div id="navbar-placeholder"></div>
 
-  <div class="container my-4">
-    <h1 class="mb-4 text-center">Logs di Errore</h1>
+  <div class="container my-4 border shadow rounded">
+
+    <div class="row bg-primary text-light d-flex justify-content-start ">
+      <h1 class="mb-4">Logs di Errore</h1>
+    </div>
+  
 
     <!-- Filter Form -->
-    <form id="filterForm" class="row g-3 mb-4 align-items-end">
+    <form id="filterForm" class="row g-3 mb-4 align-items-end p-3">
       <div class="col-sm-6 col-md-4 col-lg-2">
         <label for="userFilter" class="form-label">Utente</label>
         <input type="text" id="userFilter" class="form-control" placeholder="Min 3 char">
