--- a/error/error.html
+++ b/error/error.html
@@ -16,15 +16,20 @@
           <i class="bi bi-exclamation-triangle-fill"></i>
           Ops!
         </h1>
-        <p class="lead">
+        <!-- qui mostriamo il codice di errore -->
+        <p class="fw-bold" id="errorCode">Errore</p>
+        <!-- qui il messaggio -->
+        <p class="lead" id="errorMessage">
           Si è verificato un errore imprevisto.<br>
           Riprova più tardi o contatta l’assistenza.
         </p>
         <a href="../login/index.html" class="btn btn-primary mt-3">
-          Torna indietro
+          Torna al login
         </a>
       </div>
     </div>
   </div>
+  <script src="../config.js"></script>
 </body>
 </html>
+
