--- a/NoteChangeHistory/NoteChangeHistory.html
+++ b/NoteChangeHistory/NoteChangeHistory.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,12 +10,16 @@
   <link rel="stylesheet" href="../navbar/navbar.css">
   <link rel="stylesheet" href="./NoteChangeHistory.css">
 </head>
+
 <body class="bg-light">
 
   <div id="navbar-placeholder"></div>
 
-  <div class="container my-4">
-    <h1 class="mb-4 text-center">Storico Modifiche Note</h1>
+  <div class="container my-4 border">
+
+    <div class="row bg-primary d-flex justify-content-start ">
+      <h1 class="mb-4 text-light">Storico Modifiche Note</h1>
+    </div>
 
     <!-- Filter Form -->
     <form id="filterForm" class="row g-3 mb-4">
@@ -58,10 +63,15 @@
           <i class="bi bi-search"></i> Cerca
         </button>
       </div>
+      <div class="col-sm-12 col-md-4 col-lg-2 d-grid">
+        <button id="resetButton" type="button" class="btn btn-secondary mt-4">
+          <i class="bi bi-arrow-counterclockwise"></i> Reset
+        </button>
+      </div>
     </form>
 
     <!-- Results Table -->
-    <div class="table-responsive shadow-sm rounded mb-3 bg-white">
+   <div class="table-responsive shadow-sm rounded mb-3 bg-white">
       <table id="resultsTable" class="table table-striped mb-0">
         <thead class="table-light">
           <tr>
@@ -96,4 +106,5 @@
   <script src="../navbar/navbar.js"></script>
   <script src="./NoteChangeHistory.js"></script>
 </body>
+
 </html>
