--- a/archived/archived.html
+++ b/archived/archived.html
@@ -16,8 +16,11 @@
 
   <div id="navbar-placeholder"></div>
 
-  <div class="container my-4">
-    <h1 class="mb-4 text-center">Note Archiviate</h1>
+  <div class="container my-4 border">
+
+    <div class="row bg-primary d-flex justify-content-start ">
+      <h1 class="mb-4 text-light">Note Archiviate</h1>
+    </div>
 
     <!-- Filter Form -->
     <form id="filterForm" class="row g-3 align-items-end mb-4">
@@ -43,9 +46,14 @@
         <label for="yearSelect" class="form-label">Anno</label>
         <select id="yearSelect" class="form-select"></select>
       </div>
-      <div class="col-sm-12 col-md-3 d-grid">
+       <div class="col-sm-6 col-md-3 d-grid">
         <button id="searchButton" class="btn btn-primary w-100">
           Filtra
+        </button>
+      </div>
+      <div class="col-sm-6 col-md-3 d-grid">
+        <button id="resetButton" type="button" class="btn btn-secondary w-100">
+          Reset
         </button>
       </div>
     </form>
