--- a/error-log/error-log.html
+++ b/error-log/error-log.html
@@ -66,7 +66,7 @@
 
 
     <!-- Logs Table -->
-    <div class="table-responsive mb-4">
+    <div class="mb-4">
       <table id="logsTable" class="table table-striped table-hover align-middle">
         <thead class="table-light">
           <tr>
