--- a/view-note/view-note.html
+++ b/view-note/view-note.html
@@ -53,6 +53,10 @@
           <ul id="shareSearchResults" class="list-group position-absolute w-100" style="z-index:1000;"></ul>
         </div>
 
+        <p id="noShareNotice" class="text-muted d-none">
+          Non puoi condividere questa nota perché non sei il proprietario.
+        </p>
+
         <div class="mb-3">
           <strong id="sharedLabel"></strong>
           <ul id="currentSharedList" class="list-group mt-2"></ul>
